{
    "name": "MainPlayer",
    "maps": [
        {
            "name": "Movement",
            "id": "41d30dd2-8d26-4a67-b86c-ef932071ed49",
            "actions": [
                {
                    "name": "LR",
                    "type": "Value",
                    "id": "b6207df0-4abc-478a-bc8e-9952693eb179",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BF",
                    "type": "Value",
                    "id": "e2689e86-61dd-48e3-9264-409778cebe19",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "bcb63ec7-5782-4006-b00f-46ea6985ae24",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotX",
                    "type": "Value",
                    "id": "6b56a8af-16e3-41f3-90be-40c9a0cf1bc9",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotY",
                    "type": "Value",
                    "id": "57832591-6204-4663-bea8-61cb415a94b0",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SnapToggle",
                    "type": "Button",
                    "id": "05117a65-4c65-4597-ac60-a10ed26ce633",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Place",
                    "type": "Button",
                    "id": "dfe828cb-8e65-455b-b3df-b40da1cc0db0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PickUp",
                    "type": "Button",
                    "id": "b4d5bf8a-3fb8-4e87-9452-48ab653f0619",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "612cc5f3-4778-45d9-899b-909731e7738e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Scroll",
                    "type": "Value",
                    "id": "9e9c8909-a0ed-458c-a43b-84bffe4c9dc9",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Throw",
                    "type": "Button",
                    "id": "6527e150-349a-44ee-b02d-ab06cf2bef0b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "6f7a0d2b-04c9-451e-a230-f614a7cabae5",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LR",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "07d0e4a3-9544-4ae8-920a-965ceb29adca",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB/M",
                    "action": "LR",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b895604b-12d5-4f3c-b113-2ad86bbb71c7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB/M",
                    "action": "LR",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7e3799f7-7329-4fbb-90ee-e063ee05262d",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "Gamepad",
                    "action": "LR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "302a4cc1-242a-4330-a658-d062dbbfd151",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB/M",
                    "action": "BF",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d9b24e35-30a4-4969-b1a8-611347df3851",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB/M",
                    "action": "BF",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "5e909d27-0854-421c-9d65-c95fdc08ba6e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB/M",
                    "action": "BF",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "977d292e-9264-4716-a5fc-7e9148a61ba7",
                    "path": "<Gamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "Gamepad",
                    "action": "BF",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bbac289f-fde6-4bd4-bbfc-b3515d49319a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB/M",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "766fb96c-c675-4767-ac8c-fad187abbc98",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b79255a-0bc1-44f4-a35f-5daccfb4de65",
                    "path": "<Gamepad>/rightStick/x",
                    "interactions": "",
                    "processors": "AxisDeadzone,Scale(factor=2)",
                    "groups": "Gamepad",
                    "action": "RotX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4046a50b-d8d4-4447-a095-7c265c2b9920",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB/M",
                    "action": "RotX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f5c26d5-315e-4268-90be-fc440a9934ed",
                    "path": "<Gamepad>/rightStick/y",
                    "interactions": "",
                    "processors": "AxisDeadzone,Scale(factor=2)",
                    "groups": "Gamepad",
                    "action": "RotY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8e1278c-31b4-4bb0-b25b-dd615ba4316c",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB/M",
                    "action": "RotY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64de2083-c0ed-4c1d-b838-74a3fec73ac8",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB/M",
                    "action": "SnapToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "763866d6-faec-470c-929d-b0a16f39cc7b",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "SnapToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0be26922-e929-455f-8457-c8a05e3aa147",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB/M",
                    "action": "Place",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f323df03-e65d-4f55-b52f-e50d7c4c7e07",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Place",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e6b4b23-75ae-4097-9217-0bce5cab462c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB/M",
                    "action": "PickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9cec3925-502f-466a-871d-08784b5f6778",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "PickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f4a387fa-d2aa-4cb7-b331-6263c63fed0e",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "556392ea-3fd2-48f1-ab56-924c41a3b034",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "691ea39d-d7ec-4e86-87c6-10a86aa0240c",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0ecc28d-fc8d-4a0b-a61d-6b3804a840d5",
                    "path": "<Gamepad>/dpad/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c909519-59cc-4a8a-93f3-19500e9add5a",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Throw",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ad8a8137-2d21-4f6e-8baf-1eda35c07521",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KB/M",
                    "action": "Throw",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Viewing",
            "id": "5496e4fc-9837-410d-88a6-ec3548c3123a",
            "actions": [],
            "bindings": []
        },
        {
            "name": "Other",
            "id": "9d775476-17fd-41ac-8618-075f7c2dc323",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": [
        {
            "name": "KB/M",
            "bindingGroup": "KB/M",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}